--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,16 @@
 language: ruby
+node_js:
+  - "6"
 rvm:
   - 2.2
+env:
+  - TRAVIS_NODE_VERSION="6"
 before_script:
   - gem install awesome_bot
+install:
+  - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION
+  - npm install
+  - npm install alex
 script:
   - awesome_bot README.md --allow-dupe --allow-redirect
+  - alex
