Fixing alex build failures in travis CI
This closes ##57

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
-  "dependencies": {
+  "scripts": {
+    "test-doc": "alex",
+    "test": "npm run test-doc"
+  },
+  "devDependencies": {
     "alex": "^1.0.0"
   }
 }
